# simple-icons-rs

./: Cargo.toml  README.md
icon_builder/: Cargo.toml
icon_builder/src/: main.rs
src/: built_icons.rs  icon_loader.rs  lib.rs
src/built_icons/: icon_1001_tracklists.rs  icon_1_password.rs  icon_3_m.rs  icon_42.rs  icon_4_chan.rs  icon_4_d.rs  icon_500_px.rs  icon_abbott.rs  icon_abbrobotstudio.rs  icon_abbvie.rs  icon_abletonlive.rs  icon_aboutdotme.rs  icon_abstract.rs  icon_academia.rs  icon_accenture.rs  icon_acclaim.rs  icon_accusoft.rs  icon_acer.rs  icon_acm.rs  icon_actigraph.rs  icon_activision.rs  icon_adafruit.rs  icon_adblock.rs  icon_adblockplus.rs  icon_addthis.rs  icon_adguard.rs  icon_adidas.rs  icon_adobe.rs  icon_adobeacrobatreader.rs  icon_adobeaftereffects.rs  icon_adobeaudition.rs  icon_adobecreativecloud.rs  icon_adobedreamweaver.rs  icon_adobefonts.rs  icon_adobeillustrator.rs  icon_adobeindesign.rs  icon_adobelightroom.rs  icon_adobelightroomclassic.rs  icon_adobephotoshop.rs  icon_adobepremierepro.rs  (+2260 more)
src/icons/: icon_1001_tracklists.rs  icon_1_password.rs  icon_3_m.rs  icon_42.rs  icon_4_chan.rs  icon_4_d.rs  icon_500_px.rs  iconabbott.rs  iconabbrobotstudio.rs  iconabbvie.rs  iconabletonlive.rs  iconaboutdotme.rs  iconabstract.rs  iconacademia.rs  iconaccenture.rs  iconacclaim.rs  iconaccusoft.rs  iconacer.rs  iconacm.rs  iconactigraph.rs  iconactivision.rs  iconadafruit.rs  iconadblock.rs  iconadblockplus.rs  iconaddthis.rs  iconadguard.rs  iconadidas.rs  iconadobe.rs  iconadobeacrobatreader.rs  iconadobeaftereffects.rs  iconadobeaudition.rs  iconadobecreativecloud.rs  iconadobedreamweaver.rs  iconadobefonts.rs  iconadobeillustrator.rs  iconadobeindesign.rs  iconadobelightroom.rs  iconadobelightroomclassic.rs  iconadobephotoshop.rs  iconadobepremierepro.rs  (+2248 more)
