[package]
name = "simple-icons-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>", "Simple Icons"]
description = "Simple Icons built for Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["icons"]
icons = []