[package]
name = "simple-icons-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>", "Simple Icons"]
description = "Simple Icons built for Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4.17" }
# Icon Loader
tempdir = { version = "0.3.7", optional = true }
reqwest = { version = "0.11.11", features = ["stream"], optional = true }
zip = { version = "0.6.2", optional = true }
bytes = { version = "1.1.0", optional = true }
futures-util = { version = "0.3.21", optional = true }
octocrab = { version = "0.16", optional = true }
thiserror = { version = "1.0.31", optional = true }
serde = { version = "1.0.140", optional = true }
serde_json = { version = "1.0.82", optional = true }
regex = { version = "1.6.0", optional = true }
once_cell = { version = "1.13.0", optional = true }
tokio = { version = "1.20.0", optional = true , features=["io-util"]}
[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }
[features]
icon_loader = ["tokio","regex", "tempdir", "reqwest", "zip", "bytes", "futures-util", "octocrab", "thiserror", "serde", "serde_json","once_cell"]
built_icons = []

