[package]
name = "icon_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.58"
genco = "0.17.1"
convert_case = "0.5.0"
simple-icons-rs = {path="../", features=["icon_loader"]}
